Refactor website layout and page components, update global styles, and modify header and footer components
- Refactored the `WebsiteLayout` component to remove unnecessary div wrappers and repositioned the `Header` and `Footer` components
- Updated the `Page` component to display a welcome message with additional information about services offered
- Modified global CSS styles to apply border color to all elements, set font feature settings, and adjust styling for body, main, and h1 elements
- Adjusted the `RootLayout` component to suppress hydration warning when rendering HTML element
- Updated the `Footer` component to add a copyright symbol with text indicating company name and current year
- Modified the `Header` component to wrap logo image and site navigation in a container element

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	* {
+		@apply border-gray-100;
+	}
+	body {
+		font-feature-settings: 'rlig' 1, 'calt' 1;
+		@apply flex h-full flex-col;
+	}
+
+	main {
+		@apply mx-auto h-full w-full max-w-6xl flex-1;
+	}
+	h1 {
+		@apply text-5xl;
+	}
+}
